--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
+    <link rel="stylesheet" href="./styles.css">
     <script src="./scripts.js"> </script>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="display"> 
+            
+        </div>
+
+        <div class="cancelAndBackspace">
+
+        </div>
+
+        <div class="Mathoperator">
+
+        </div>
+
+        <div class="numbers">
+
+        </div>
+    </div>
 </body>
 </html>
