working on the buttons of the calculator

--- a/index.html
+++ b/index.html
@@ -14,11 +14,17 @@
         </div>
 
         <div class="cancelAndBackspace">
-
+            <button class="clear"> C </button>
+            <button class="backspace"> 
+                <img class = "backspace_img" src="./images/key.png" alt="backspace_img"> 
+            </button>
         </div>
 
         <div class="Mathoperator">
-
+            <button class="add"> + </button>
+            <button class="subtract"> - </button>
+            <button class="multiply"> × </button>
+            <button class="divide"> ÷ </button>
         </div>
 
         <div class="numbers">
