--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <img class = "backspace_img" src="./images/key.png" alt="backspace_img"> 
             </button>
         </div>
-        <div class="buttonContainer"> <!-- added this for testing of event delegation -->
+        <div class="buttonContainer">
         <div class="buttonsrow">
             <button class="buttonStyle"> + </button>
             <button class="buttonStyle"> - </button>
@@ -27,7 +27,7 @@
         </div>
 
         <div class="buttonsrow">
-            <button class="buttonStyle" id="one"> 1 </button>
+            <button class="buttonStyle"> 1 </button>
             <button class="buttonStyle"> 2 </button>
             <button class="buttonStyle"> 3 </button>
             <button class="buttonStyle"> 4 </button>
