logic till filling the display panel

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <div class="display" id="displayPanel"> 
-            
-        </div>
+        <div class="displayInsideContainer"> </div>
+        <div class="display" id="displayPanel"> </div>
 
         <div class="cancelAndBackspace">
             <button class="clear"> C </button>
@@ -19,14 +18,14 @@
             </button>
         </div>
         
-        <div class="buttonsrow">
+        <div class="buttonsrow operatorButtons">
             <button class="buttonStyle"> + </button>
             <button class="buttonStyle"> - </button>
             <button class="buttonStyle"> × </button>
             <button class="buttonStyle"> ÷ </button>
         </div>
 
-        <div class="buttonContainer">
+        <div class="buttonContainer id:buttonContainerForSecondValue">
 
         <div class="buttonsrow">
             <button class="buttonStyle"> 1 </button>
