--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="displayInsideContainer"> </div>
+        <div class="displayFirstContainer"> </div>
         <div class="display" id="displayPanel"> </div>
 
         <div class="cancelAndBackspace">
@@ -45,7 +45,7 @@
             <button class="buttonStyle"> 9 </button>
             <button class="buttonStyle"> 0 </button>
             <button class="buttonStyle"> . </button>
-            <button class="buttonStyle equalButton"> = </button>
+            <button class="buttonStyle equalButton excludeMe"> = </button>
         </div>
         </div>
     </div>
