changes in mypx

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         </div>
         <div class="buttonContainer">
         <div class="buttonsrow">
-            <button class="buttonStyle"> + </button>
-            <button class="buttonStyle"> - </button>
-            <button class="buttonStyle"> × </button>
-            <button class="buttonStyle"> ÷ </button>
+            <button class="buttonStyle operands"> + </button>
+            <button class="buttonStyle operands"> - </button>
+            <button class="buttonStyle operands"> × </button>
+            <button class="buttonStyle operands"> ÷ </button>
         </div>
 
         <div class="buttonsrow">
