logic till math operations

--- a/index.html
+++ b/index.html
@@ -17,35 +17,35 @@
                 <img class = "backspace_img" src="./images/key.png" alt="backspace_img"> 
             </button>
         </div>
-        <div class="buttonContainer"> <!-- added this for testing of event delegation -->
-        <div class="buttonsrow">
-            <button class="buttonStyle"> + </button>
-            <button class="buttonStyle"> - </button>
-            <button class="buttonStyle"> × </button>
-            <button class="buttonStyle"> ÷ </button>
+        
+        <div class="buttonsrow operatorButtons">
+            <button class="buttonStyle">+</button>
+            <button class="buttonStyle">-</button>
+            <button class="buttonStyle">×</button>
+            <button class="buttonStyle">÷</button>
         </div>
 
         <div class="buttonContainer id:buttonContainerForSecondValue">
 
         <div class="buttonsrow">
-            <button class="buttonStyle"> 1 </button>
-            <button class="buttonStyle"> 2 </button>
-            <button class="buttonStyle"> 3 </button>
-            <button class="buttonStyle"> 4 </button>
+            <button class="buttonStyle">1</button>
+            <button class="buttonStyle">2</button>
+            <button class="buttonStyle">3</button>
+            <button class="buttonStyle">4</button>
         </div>
 
         <div class="buttonsrow">
-            <button class="buttonStyle"> 5 </button>
-            <button class="buttonStyle"> 6 </button>
-            <button class="buttonStyle"> 7 </button>
-            <button class="buttonStyle"> 8 </button>
+            <button class="buttonStyle">5</button>
+            <button class="buttonStyle">6</button>
+            <button class="buttonStyle">7</button>
+            <button class="buttonStyle">8</button>
         </div>
 
         <div class="buttonsrow">
-            <button class="buttonStyle"> 9 </button>
-            <button class="buttonStyle"> 0 </button>
-            <button class="buttonStyle"> . </button>
-            <button class="buttonStyle equalButton excludeMe"> = </button>
+            <button class="buttonStyle">9</button>
+            <button class="buttonStyle">0</button>
+            <button class="buttonStyle">.</button>
+            <button class="buttonStyle equalButton excludeMe">=</button>
         </div>
         </div>
     </div>
