interaction logic done

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="display" id="displayPanel"> </div>
 
         <div class="cancelAndBackspace">
-            <button class="clear"> C </button>
+            <button class="clear">C</button>
             <button class="backspace"> 
                 <img class = "backspace_img" src="./images/key.png" alt="backspace_img"> 
             </button>
@@ -43,8 +43,7 @@
 
         <div class="buttonsrow">
             <button class="buttonStyle">9</button>
-            <button class="buttonStyle">0</button>
-            <button class="buttonStyle">.</button>
+            <button class="buttonStyle zero">0</button>
             <button class="buttonStyle equalButton excludeMe">=</button>
         </div>
         </div>
