--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+    
     <div class="container">
+        <div class="calculator_heading">
+            <h1 class="heading">Calculator</h1>
+        </div>
         <div class="displayFirstContainer"> </div>
         <div class="display" id="displayPanel"> </div>
 
@@ -19,10 +23,10 @@
         </div>
         
         <div class="buttonsrow operatorButtons">
-            <button class="buttonStyle">+</button>
-            <button class="buttonStyle">-</button>
-            <button class="buttonStyle">×</button>
-            <button class="buttonStyle">÷</button>
+            <button class="buttonStyle operatorButtonStyle">+</button>
+            <button class="buttonStyle operatorButtonStyle">-</button>
+            <button class="buttonStyle operatorButtonStyle">×</button>
+            <button class="buttonStyle operatorButtonStyle">÷</button>
         </div>
 
         <div class="buttonContainer id:buttonContainerForSecondValue">
